# apitestframework

./: .coveragerc  .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  run_test.sh
config/: test.json
config/output/: booking-expected.json  deletebooking-expected.json  reservation-expected.json  search-expected.json  status-expected.json
src/: MANIFEST.in  README  requirements.txt  setup.cfg  setup.py
src/apitestframework/: __init__.py  __main__.py
src/apitestframework/core/: api_test.py  test_run.py  test_suite.py
src/apitestframework/utils/: api_test_utils.py  config.py  header.py  header_utils.py  misc.py  test_status.py
test/core/: __init__.py  test_api_test.py  test_test_run.py  test_test_suite.py
test/utils/: test_api_test_utils.py  test_config.py  test_header.py  test_header_utils.py  test_misc.py  test_test_status.py
