[metadata]
name = apitestframework
version = attr: apitestframework.__version__
description = apitestframework
long_description = file: README
url = https://www.jmatica.com
platforms =
    any
keywords = D-Bus, FPT
license = "Apache License, Version 2.0"
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
author = Stefano Ciarcia'
author_email = stefano.ciarcia@jmatica.com

[options]
include_package_data = True
packages = find:
zip_safe = True

[options.package_data]
* = *.json, *.txt, *.xml
